# deep-research-examples

./: .gitignore  README.md
examples/ai_theme_plays/: README.md  agent.py  config.py  langsmith_export.py  main.py  middleware.py  models.py  pyproject.toml  subagents.py  tools.py  utils.py
examples/ai_theme_plays/artifacts/: transcript.txt
examples/pm_deep_agent/: README.md  graph.py  pyproject.toml  run_deepagent.py  tools.py  utils.py
examples/stagehand_company_news/: .env.example  .gitignore  README.md  companies.ts  config.ts  package-lock.json  package.json  tsconfig.json
examples/stagehand_company_news/analysis/: compare-models.ts  model-comparison-results.csv  model-comparison-summary.csv
examples/stagehand_company_news/src/: llm-providers.ts  news-discovery.ts  prompts.ts  schemas.ts  types.ts  utils.ts
examples/stagehand_company_news/tests/: test-news-discovery.ts
examples/stagehand_company_news/utils/: stagehand-s3-persistence.ts
